patches-core/tests/compile_fail/array_without_index.stderr
error[E0277]: the trait bound `FloatParamArray: ParamKey` is not satisfied
  --> tests/compile_fail/array_without_index.rs:12:22
   |
12 |     let _ = view.get(params::GAIN);
   |                  --- ^^^^^^^^^^^^ the trait `ParamKey` is not implemented for `FloatParamArray`
   |                  |
   |                  required by a bound introduced by this call
   |
   = help: the following other types implement trait `ParamKey`:
             BoolParamKey
             BoolParamName
             BufferParamKey
             BufferParamName
             EnumParamKey<E>
             EnumParamName<E>
             FloatParamKey
             FloatParamName
           and $N others
note: required by a bound in `ParamView::<'a>::get`
  --> src/param_frame/view.rs
   |
   |     pub fn get<K: crate::params::ParamKey>(&self, key: K) -> K::Value {
   |                   ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ParamView::<'a>::get`
